// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WestLetter/> renders users 1`] = `
<div>
  <div
    className="beta"
  >
    <h1>
      This site is still in BeTa version
    </h1>
    <h2>
      Soon we will be able to track WestLetters in each week ;)
    </h2>
  </div>
  <h4>
    We have 
    7
     week of 
    2018
  </h4>
  <div
    style={
      Object {
        "display": "inline-flex",
      }
    }
  >
    <div
      key="1707149242852457_1938133309754048"
      style={
        Object {
          "border": "1px black solid",
          "display": "block",
          "padding": 2,
        }
      }
    >
      <input
        type="checkbox"
      />
      <span
        hidden={true}
      >
        1707149242852457_1938133309754048
      </span>
      <OverlayTrigger
        defaultOverlayShown={false}
        overlay={
          <Tooltip
            bsClass="tooltip"
            id="tt_1707149242852457_1938133309754048"
            placement="right"
          />
        }
        placement="bottom"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <Image
          bsClass="img"
          circle={false}
          responsive={false}
          rounded={false}
          src="https://graph.facebook.com/v2.10/10202921980928649/picture?height=50"
          thumbnail={false}
        />
      </OverlayTrigger>
      <div>
        <span>
          2017-2-24
        </span>
        <br />
        <span>
          week:
          8
        </span>
        <br />
        <span>
          is added
        </span>
      </div>
    </div>
    <div
      key="1707149242852457_1941491366084909"
      style={
        Object {
          "border": "1px black solid",
          "display": "block",
          "padding": 2,
        }
      }
    >
      <input
        type="checkbox"
      />
      <span
        hidden={true}
      >
        1707149242852457_1941491366084909
      </span>
      <OverlayTrigger
        defaultOverlayShown={false}
        overlay={
          <Tooltip
            bsClass="tooltip"
            id="tt_1707149242852457_1941491366084909"
            placement="right"
          />
        }
        placement="bottom"
        trigger={
          Array [
            "hover",
            "focus",
          ]
        }
      >
        <Image
          bsClass="img"
          circle={false}
          responsive={false}
          rounded={false}
          src="https://graph.facebook.com/v2.10/10202921980928649/picture?height=50"
          thumbnail={false}
        />
      </OverlayTrigger>
      <div>
        <span>
          2017-3-3
        </span>
        <br />
        <span>
          week:
          9
        </span>
        <br />
        <span>
          is added
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<WestLetter/> renders without crashing ChartPresenter 1`] = `
<div>
  <div
    className="beta"
  >
    <h1>
      This site is still in BeTa version
    </h1>
    <h2>
      Soon we will be able to track WestLetters in each week ;)
    </h2>
  </div>
  <h4>
    We have 
    7
     week of 
    2018
  </h4>
  <div
    style={
      Object {
        "display": "inline-flex",
      }
    }
  />
</div>
`;
